--- a/Client/carRentalWA/index.html
+++ b/Client/carRentalWA/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="./src/asset/angry cat.PNG" />
+    <link rel="icon" type="" href="./src/asset/Logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Rental</title>
   </head>
